force-app/main/default/objects/sf_Application_Detail_Language__c/sf_Application_Detail_Language__c.object-meta.xml
<CustomObject>
    <label>Application Detail Language</label>
    <nameField>
        <displayFormat>ADL-{000000}</displayFormat>
        <label>Application Detail Langauage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Detail Languages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>